# arbiter-starter

./: README.md  collector-gateway.yaml  docker-compose.yml  main.py  prometheus.yaml  pyproject.toml  requirements.txt
grafana/dashboards/: opentelemetry-APM.json
grafana/provisioning/dashboards/: dashboards.yaml
grafana/provisioning/datasources/: default.yaml
