[tool.poetry]
name = "arbiter-starter"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
arbiter = {git = "ssh://git@github.com/kc-softmax/arbiter.git", rev = "develop"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
